k8s/helm/api-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-ktor-virtual-service
spec:
  hosts:
    - "api.hr.io"
  gateways:
    - api-ktor-gateway
  http:
    - route:
      - destination:
          host: ktor-api-service
          port:
            number: 8080
